@@ -4,12 +4,11 @@ import net.minecraftforge.fml.common.Loader;
 import net.minecraftforge.fml.common.ModAPIManager;
 import thaumicenergistics.init.ModGlobals;
 import thaumicenergistics.integration.appeng.ThEAppliedEnergistics;
-import thaumicenergistics.integration.hwyla.ThEHwyla;
 import thaumicenergistics.integration.invtweaks.ThEInvTweaks;
 import thaumicenergistics.integration.thaumcraft.ThEThaumcraft;
-import thaumicenergistics.integration.theoneprobe.ThETheOneProbe;
 import thaumicenergistics.util.ThELog;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 /**
@@ -23,17 +22,17 @@ public class ThEIntegrationLoader {
         registerIntegration("thaumcraft", ThEThaumcraft.class);
         registerIntegration(ModGlobals.MOD_ID_AE2, ThEAppliedEnergistics.class);
         registerIntegration("inventorytweaks", ThEInvTweaks.class);
-        registerIntegration("mobius/waila", ThEHwyla.class);
-        registerIntegration("theoneprobe", ThETheOneProbe.class);
     }
 
     private static void registerIntegration(String modId, Class<? extends IThEIntegration> integration) {
         if (Loader.isModLoaded(modId) || apiManager.hasAPI(modId)) {
             try {
-                INTEGRATIONS.put(integration.newInstance(), modId);
+                INTEGRATIONS.put(integration.getDeclaredConstructor().newInstance(), modId);
                 ThELog.info("Integrations: Registered [" + modId + "]");
             } catch (InstantiationException | IllegalAccessException ex) {
                 ThELog.error("Failed to instantiate an integration class", ex);
+            } catch (InvocationTargetException | NoSuchMethodException e) {
+                throw new RuntimeException(e);
             }
         } else
             ThELog.debug("Integrations: Not found [" + modId + "]");
